--- a/eoffice_korem/src/main/res/layout/activity_profile.xml
+++ b/eoffice_korem/src/main/res/layout/activity_profile.xml
@@ -31,6 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
