fix: add see image for surat masuk/keluar

--- a/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
+++ b/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
@@ -255,6 +255,45 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/btn_sm_img"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner"
+                android:backgroundTint="@color/md_blue_700"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/rounded_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="6dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/icon_surat_image"
+                        android:src="@drawable/ic_image"
+                        app:tint="@color/md_blue_900" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"
+                    android:text="@string/gambar_surat"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
