--- a/eoffice_korem/src/main/res/layout/activity_tambah_surat_keluar.xml
+++ b/eoffice_korem/src/main/res/layout/activity_tambah_surat_keluar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.eoffice_korem.surat.keluar.TambahSuratKeluarActivity">
+    tools:context="com.jaylangkung.eoffice_korem.surat.keluar.TambahSuratKeluarActivity">
 
     <LinearLayout
         android:id="@+id/ll_header"
