--- a/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_surat.xml
@@ -27,7 +27,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_weight="1"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +45,7 @@
             app:smsp_selectedItemListColor="@color/primaryDarkColor" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout2"
+            android:id="@+id/input_catatan"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,12 +65,34 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
+            android:id="@+id/catatan_tambahan_disposisi_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:spinnerMode="dropdown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_catatan"
+            app:smsp_arrowColor="@color/primaryColor"
+            app:smsp_hint="Catatan Tambahan"
+            app:smsp_hintColor="@color/primaryColor"
+            app:smsp_isOutlined="true"
+            app:smsp_itemColor="@color/black"
+            app:smsp_itemListColor="@color/black"
+            app:smsp_itemListHintBackgroundColor="#808080"
+            app:smsp_itemListHintColor="#FFFFFF"
+            app:smsp_multilineError="false"
+            app:smsp_outlinedBoxColor="@color/primaryColor"
+            app:smsp_outlinedBoxRadius="4dp"
+            app:smsp_selectedItemListColor="@color/primaryDarkColor" />
+
         <com.chand.progressbutton.ProgressButton
             android:id="@+id/btn_send_disposisi"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/catatan_tambahan_disposisi_spinner"
             app:p_arrowVisible="false"
             app:p_backgroundTint="@color/primaryColor"
             app:p_bgColor="@color/colorSecondary"
