--- a/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
+++ b/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:text="@string/sm_penerima"
+            android:text="@string/dispo_penerima"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
