--- a/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_surat.xml
@@ -44,6 +44,128 @@
             app:smsp_outlinedBoxRadius="4dp"
             app:smsp_selectedItemListColor="@color/primaryDarkColor" />
 
+        <!--        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:spinnerMode="dropdown"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:smsp_arrowColor="@color/primaryColor"-->
+        <!--            app:smsp_hint="Catatan Tambahan"-->
+        <!--            app:smsp_hintColor="@color/primaryColor"-->
+        <!--            app:smsp_isOutlined="true"-->
+        <!--            app:smsp_itemColor="@color/black"-->
+        <!--            app:smsp_itemListColor="@color/black"-->
+        <!--            app:smsp_itemListHintBackgroundColor="#808080"-->
+        <!--            app:smsp_itemListHintColor="#FFFFFF"-->
+        <!--            app:smsp_multilineError="false"-->
+        <!--            app:smsp_outlinedBoxColor="@color/primaryColor"-->
+        <!--            app:smsp_outlinedBoxRadius="4dp"-->
+        <!--            app:smsp_selectedItemListColor="@color/primaryDarkColor" />-->
+
+
+        <TextView
+            android:id="@+id/tv_catatan_tambahan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Catatan Tambahan"
+            android:textColor="@color/primaryColor"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/penerima_disposisi_spinner" />
+
+        <GridLayout
+            android:id="@+id/catatan_tambahan_disposisi_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:columnCount="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_catatan_tambahan">
+
+            <CheckBox
+                android:id="@+id/checkbox_acc_catat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ACC CATAT" />
+
+            <CheckBox
+                android:id="@+id/checkbox_ingatkan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INGATKAN" />
+
+            <CheckBox
+                android:id="@+id/checkbox_koordinasikan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="KOORDINASIKAN" />
+
+            <CheckBox
+                android:id="@+id/checkbox_lapor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LAPORKAN" />
+
+            <CheckBox
+                android:id="@+id/checkbox_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MONITOR" />
+
+            <CheckBox
+                android:id="@+id/checkbox_pedomani"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PEDOMANI" />
+
+            <CheckBox
+                android:id="@+id/checkbox_pelajari"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PELAJARI" />
+
+            <CheckBox
+                android:id="@+id/checkbox_sarankan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SARANKAN" />
+
+            <CheckBox
+                android:id="@+id/checkbox_st_sprinkan_edarkan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ST SPRINKAN EDARKAN" />
+
+            <CheckBox
+                android:id="@+id/checkbox_tindak_lanjuti"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TINDAK LANJUTI" />
+
+            <CheckBox
+                android:id="@+id/checkbox_udk_arsipkan_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UDK ARSIPKAN MONITOR" />
+
+            <CheckBox
+                android:id="@+id/checkbox_udl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UDL" />
+
+            <CheckBox
+                android:id="@+id/checkbox_wakili"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="WAKILI" />
+
+        </GridLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_catatan"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -53,46 +175,24 @@
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/penerima_disposisi_spinner">
+            app:layout_constraintTop_toBottomOf="@+id/catatan_tambahan_disposisi_checkbox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_disposisi_catatan"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/white"
-                android:hint="@string/disposisi_catatan"
+                android:hint=""
                 android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
-            android:id="@+id/catatan_tambahan_disposisi_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_catatan"
-            app:smsp_arrowColor="@color/primaryColor"
-            app:smsp_hint="Catatan Tambahan"
-            app:smsp_hintColor="@color/primaryColor"
-            app:smsp_isOutlined="true"
-            app:smsp_itemColor="@color/black"
-            app:smsp_itemListColor="@color/black"
-            app:smsp_itemListHintBackgroundColor="#808080"
-            app:smsp_itemListHintColor="#FFFFFF"
-            app:smsp_multilineError="false"
-            app:smsp_outlinedBoxColor="@color/primaryColor"
-            app:smsp_outlinedBoxRadius="4dp"
-            app:smsp_selectedItemListColor="@color/primaryDarkColor" />
 
         <com.chand.progressbutton.ProgressButton
             android:id="@+id/btn_send_disposisi"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/catatan_tambahan_disposisi_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/input_catatan"
             app:p_arrowVisible="false"
             app:p_backgroundTint="@color/primaryColor"
             app:p_bgColor="@color/colorSecondary"
