feat: - change status to 'dibaca' when see image is clicked - add button 'acc' if status 'pengajuan'

--- a/eoffice_korem/src/main/res/layout/item_surat_keluar.xml
+++ b/eoffice_korem/src/main/res/layout/item_surat_keluar.xml
@@ -95,6 +95,50 @@
             app:layout_constraintTop_toBottomOf="@+id/separator2" />
 
         <LinearLayout
+            android:id="@+id/btn_sk_acc"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_corner"
+            android:backgroundTint="@color/primaryColor"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_sk_status">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_corner"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="6dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/icon_disposisi_surat"
+                    android:src="@drawable/ic_approve"
+                    app:tint="@color/primaryDarkColor" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:text="@string/acc_surat"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/ll_sk_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -104,7 +148,7 @@
             android:weightSum="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sk_status">
+            app:layout_constraintTop_toBottomOf="@+id/btn_sk_acc">
 
             <LinearLayout
                 android:id="@+id/btn_sk_teruskan"
