--- a/eoffice_korem/src/main/res/layout/activity_main.xml
+++ b/eoffice_korem/src/main/res/layout/activity_main.xml
@@ -38,8 +38,20 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_notification"
             app:layout_constraintStart_toEndOf="@+id/img_photo"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/btn_notification"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:src="@drawable/ic_notification"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -98,8 +110,8 @@
         <LinearLayout
             android:id="@+id/btn_surat_keluar"
             android:layout_width="match_parent"
-            android:layout_marginTop="24dp"
             android:layout_height="80dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/primaryColor"
             android:foreground="?android:attr/selectableItemBackground"
