--- a/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
@@ -22,19 +22,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.denzcoskun.imageslider.ImageSlider
-            android:id="@+id/imgslider_giat"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="12dp"
-            app:iss_auto_cycle="true"
-            app:iss_corner_radius="20"
-            app:iss_delay="0"
-            app:iss_period="5000"
-            app:iss_placeholder="@drawable/ic_empty"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator" />
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/separator">
+
+            <LinearLayout
+                android:id="@+id/ll_surat_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+        </ScrollView>
+
+        <!--        <com.denzcoskun.imageslider.ImageSlider-->
+        <!--            android:id="@+id/surat_img"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_marginTop="12dp"-->
+        <!--            android:scaleType="matrix"-->
+        <!--            app:iss_auto_cycle="true"-->
+        <!--            app:iss_corner_radius="20"-->
+        <!--            app:iss_delay="0"-->
+        <!--            app:iss_period="5000"-->
+        <!--            app:iss_placeholder="@drawable/ic_empty"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/separator" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
