--- a/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -38,20 +38,19 @@
 
         </ScrollView>
 
-        <!--        <com.denzcoskun.imageslider.ImageSlider-->
-        <!--            android:id="@+id/surat_img"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:layout_marginTop="12dp"-->
-        <!--            android:scaleType="matrix"-->
-        <!--            app:iss_auto_cycle="true"-->
-        <!--            app:iss_corner_radius="20"-->
-        <!--            app:iss_delay="0"-->
-        <!--            app:iss_period="5000"-->
-        <!--            app:iss_placeholder="@drawable/ic_empty"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/separator" />-->
+        <ImageButton
+            android:id="@+id/btn_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_box"
+            android:backgroundTint="@color/md_grey_300"
+            android:layout_marginBottom="20dp"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:src="@drawable/ic_close"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
