--- a/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toBottomOf="@+id/separator">
 
             <LinearLayout
-                android:id="@+id/ll_surat_image"
+                android:id="@+id/ll_surat_files"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
