feat: - code refactor - bug fixing in tambah surat masuk - bump version

--- a/eoffice_korem/src/main/res/layout/activity_disposisi.xml
+++ b/eoffice_korem/src/main/res/layout/activity_disposisi.xml
@@ -124,7 +124,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/catatan_tambahan"
+                android:text="@string/disposisi"
                 android:textColor="@color/primaryColor"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
