--- a/eoffice_korem/src/main/res/layout/activity_tambah_surat_masuk.xml
+++ b/eoffice_korem/src/main/res/layout/activity_tambah_surat_masuk.xml
@@ -174,14 +174,14 @@
                 android:text="@string/tambah_foto"
                 android:textColor="@color/white" />
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/surat_masuk_img_view"
+            <LinearLayout
+                android:id="@+id/ll_selected_files"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginTop="6dp"
-                android:contentDescription="@string/image"
-                android:visibility="gone"
-                app:riv_corner_radius="75dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical">
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btn_tanggal_surat"
