--- a/Staff/src/main/res/layout/activity_monitoring.xml
+++ b/Staff/src/main/res/layout/activity_monitoring.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="18dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/rv_ethernet"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,6 +24,8 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:contentDescription="@string/btn_back"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
             android:src="@drawable/ic_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,19 +45,18 @@
         android:layout_width="match_parent"
         android:layout_height="62dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/bg_ethernet"
         app:layout_constraintBottom_toTopOf="@+id/rv_user_dc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_header"
         tools:listitem="@layout/item_ethernet" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_user_dc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="130dp"
         android:paddingHorizontal="24dp"
         android:paddingVertical="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
