fix: - layout fixing - permission prompt fixing - add post notification permission (still need works)

--- a/Staff/src/main/res/layout/activity_setting.xml
+++ b/Staff/src/main/res/layout/activity_setting.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="24dp"
     tools:context=".settings.SettingActivity">
-
 
     <LinearLayout
         android:id="@+id/ll_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -45,6 +44,7 @@
         android:id="@+id/btn_edit_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_searchview"
         android:clickable="true"
@@ -91,6 +91,7 @@
         android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginTop="22dp"
         android:background="@drawable/bg_searchview"
         android:clickable="true"
@@ -136,6 +137,7 @@
         android:id="@+id/app_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="@string/app_version"
         android:textColor="@color/md_grey_700"
         android:textSize="18sp"
